<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <groupId>com.signconnect</groupId>
    <artifactId>signconnect-backend</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>SignConnect Backend</name>

    <modules>
        <module>realtime-contract</module>
        <module>meeting-service</module>
        <module>realtime-service</module>
        <module>sign-inference-service</module>
    </modules>

    <properties>
        <java.version>21</java.version>
    </properties>
</project>
